deploy/00_ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: plugin-dca
  labels:
    name: plugin-dca
