deploy/01_postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  selector:
    app: postgres
  ports:
    - name: api
      port: 5432
      targetPort: 5432
      protocol: TCP
  type: ClusterIP
