deploy/03_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plugin-dca
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - dca.vultisigplugin.app
      secretName: dca-tls
  rules:
    - host: dca.vultisigplugin.app
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: server
                port:
                  number: 80
